# SpaceBuddy

./: .gitignore  README.md
SpaceBuddyApp/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  config.h  main.cpp  socketclient.cpp  socketclient.h
backend/: .env.example  main.js  package-lock.json  package.json
